--- a/app/view/home.html
+++ b/app/view/home.html
@@ -15,7 +15,7 @@
 
 
     <nav class="bgnav navbar navbar-expand-sm navbar-light"> <!--NAVBAR-->
-      <a class="navbar-brand" href="#">LOGO</a>
+      <a class="navbar-brand" href="home.html">LOGO</a>
       <div class="flex-grow-1">
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control col-lg-5" type="text" placeholder="Lorem Ipsum">
@@ -32,7 +32,7 @@
           <a class="dropdown-item" href="#">REGISTER</a>
         </div>
       </div>
-      <a id="barMenu" href=""><i class="fas fa-bars"></i> </a>
+      <a id="barMenu" onclick="Sidebarcheck()"><i class="fas fa-bars"></i> </a>
     </nav> <!--NAVBAR-->
   
    
@@ -94,7 +94,7 @@
   
         <div class="col-md-2 align-items-center justify-content-end" id="right_sidebar"> <!--RightSidebar-->
           <div class="sidebar-item">
-            <a href="#"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
+            <a onclick="SidebarHide()"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
             <span>Settings</span>
           </div>
           <div class="sidebar-item">
@@ -102,7 +102,7 @@
             <span>Articulos</span>
           </div>
           <div class="sidebar-item">
-            <a href="#"> <i class="fa fa-user" aria-hidden="true">
+            <a href="personal_data.html"> <i class="fa fa-user" aria-hidden="true">
                 <span>Account Settings</span></i></a>
           </div>
           <div class="sidebar-item">
@@ -123,6 +123,7 @@
 
 
   <!-- Optional JavaScript -->
+  <script src="./../javascript/sidebar.js"></script>
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
