--- a/app/view/personal_data.html
+++ b/app/view/personal_data.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="style.css" </head> <body>
 
     <nav class="bgnav navbar navbar-expand-sm navbar-light"> <!--NAVBAR-->
-      <a class="navbar-brand" href="#">LOGO</a>
+      <a class="navbar-brand" href="home.html">LOGO</a>
       <div class="flex-grow-1">
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control col-lg-5" type="text" placeholder="Lorem Ipsum">
@@ -31,20 +31,52 @@
           <a class="dropdown-item" href="#">REGISTER</a>
         </div>
       </div>
-      <a id="barMenu" href=""><i class="fas fa-bars"></i> </a>
+      <a id="barMenu" onclick="Sidebarcheck()"><i class="fas fa-bars"></i> </a>
     </nav> <!--NAVBAR-->
   
    
     <div class="container-fluid"> <!-- CONTENIDO-->
       <div class="row">
   
-        <div class="col-md-1" id="left_sidebar">l</div> <!-- Left Sidebar -->
-        <div class="col-md-9 container" id="Main_Content">a</div> <!-- Main Content Container -->
+        <div class="col-md-1" id="left"></div> <!-- Left Sidebar -->
+        <div class="col-md-9 container" id="Main_Content">
+          <label for="Nombre" >Nombre</label>
+          <br>
+          <input placeholder="Nombre">
+          <br>
+          <label for="Apellido" >Apellido</label>
+          <br>
+          <input placeholder="Apellido">
+          <br>
+          <label for="Email" >Email</label>
+          <br>
+          <input placeholder="Email">
+          <br>
+          <label for="Fecha" >Fecha de Nacimiento</label>
+          <br>
+          <input type="date">
+          <br>
+          <label for="FotoPerfil" >Foto de Perfil</label>
+          <br>
+          <input type="file">
+          <br>
+          <label for="Contacto 1" >Contacto 1</label>
+          <br>
+          <input type="tel">
+          <br>
+          <label for="Contacto 2" >Contacto 2</label>
+          <br>
+          <input type="tel">
+          <br>
+          <button type="button" class="btn btn-danger">Cancelar</button>
+          <button type="button" class="btn btn-success">Confirmar</button>
+
+        </div> <!-- Main Content Container -->
   
   
         <div class="col-md-2 align-items-center justify-content-end" id="right_sidebar"> <!--RightSidebar-->
           <div class="sidebar-item">
-            <a href="#"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
+            <a onclick="SidebarHide()"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
             <span>Settings</span>
           </div>
           <div class="sidebar-item">
@@ -52,7 +84,7 @@
             <span>Articulos</span>
           </div>
           <div class="sidebar-item">
-            <a href="#"> <i class="fa fa-user" aria-hidden="true">
+            <a href="personal_data.html"> <i class="fa fa-user" aria-hidden="true">
                 <span>Account Settings</span></i></a>
           </div>
           <div class="sidebar-item">
@@ -71,6 +103,7 @@
     </div> <!--CONTENIDO-->
 
   <!-- Optional JavaScript -->
+  <script src="./../javascript/sidebar.js"></script>
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
