--- a/app/view/personal_data.html
+++ b/app/view/personal_data.html
@@ -201,10 +201,18 @@
 
     </div>
   </div>
-  <!--CONTENIDO-->
+  <!--CONTENIDO--> 
 
   <!-- Optional JavaScript -->
   <script src="./../javascript/sidebar.js"></script>
+  <script src="./../javascript/user.js"></script>
+  <script src="./../javascript/comment.js"></script>
+  <script src="./../javascript/post.js"></script>
+  <script src="./../javascript/datahandler.js"></script>
+  <script src="./../javascript/index.js"></script> 
+
+
+
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
@@ -215,6 +223,8 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
+
+  
   </body>
 
 </html>
