--- a/app/view/createblog.html
+++ b/app/view/createblog.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Home</title>
+  <title>Blog</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,9 +12,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css" >
-</head> 
-<body>
-
+</head> <body>
 
     <nav class="bgnav navbar navbar-expand-sm navbar-light"> <!--NAVBAR-->
       <a class="navbar-brand" href="home.html">LOGO</a>
@@ -117,107 +115,74 @@
 </div>
 <!--Registrarse MODAL-->
 
-
     <div class="container-fluid"> <!-- CONTENIDO-->
       <div class="row">
-        <div class="col-md-1 align-items-center justify-content-end" id="left_sidebar"><!-- Left Sidebar -->
+        <div class="col-md-1 align-items-center justify-content-end" id="left_sidebar">
           <div class="sidebar-item">
-            <a href="#">Contactos<br></a>
+            <h3>Subir texto:</h3>
+            <input type="file" accept=".txt" id="CreateUploadedText">
           </div>
           <div class="sidebar-item">
-            <span>ITEM1</span>
+            <h3>Subir miniatura:</h3>
+            <input type="file" accept="image/*" id="CreateImage">
           </div>
           <div class="sidebar-item">
-                <span>ITEM2</span></i></a>
+            <h3>Listo?</h3>
+            <button class="btn-success" id="CreateAccept">Aceptar</button>
           </div>
-          <div class="sidebar-item">
-            <span>ITEM3</span>
-          </div>
-          <div class="sidebar-item">
-            <span>ITEM4</span>
-          </div>
-
-        </div> <!-- Left Sidebar -->
+        </div>
+        <div class="col-md-9 container align-items-center" id="Main_Content" > <!-- Main Content Container -->
+                  <h1>Inserta tu titulo:</h1> <!-- mr-3 para agregar espacio entre el título y el input -->
+                  <input type="text" class="form-control col-auto" placeholder="Inserta tu texto" maxlength="28" id="CreateTitle">
+                  <div class="whitespace"></div>
+                    <h1>Empieza a escribir! O sube tu escrito: </h1> 
+                  <div id="contenidoPrincipal" style="height: 60Vh;">
+                    
+                    <div class="whitespace"></div>
+                    <textarea name="" id="" class="form-control" style="width: 100%; height: 100%;" placeholder="Escribe aquí..." id="CreateText"></textarea>
+                  </div>
+      </div> <!-- Main Content Container -->
+      
+      <div class="col-md-2 align-items-center justify-content-end" id="right_sidebar"><!--RightSidebar-->
         
-        
-        <div class="col-md-9 container " id="Main_Content"> <!--MainContent-->
-          <h1 class="text-center">ARTICULOS DESTACADOS</h1>
-         <div id="CarouselContainment"  class="d-flex justify-content-center">
-          
-          <div id="carouselId" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselId" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselId" data-slide-to="1"></li>
-              <li data-target="#carouselId" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner" role="listbox">
-              <div class="carousel-item active">
-                <img class="imageCarousel" src="https://picsum.photos/200/320" alt="First slide">
-              </div>
-              <div class="carousel-item">
-                <img class="imageCarousel" src="https://picsum.photos/200/321" alt="Second slide">
-              </div>
-              <div class="carousel-item">
-                <img class="imageCarousel" src="https://picsum.photos/201/320" alt="Third slide">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselId" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselId" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-         </div>
-        </div> <!-- Main Content Container -->
-  
-  
-        <div class="col-md-2 align-items-center justify-content-end" id="right_sidebar"><!--RightSidebar-->
-        
-          <div class="sidebar-item">
-            <a onclick="SidebarHide()"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
-            <span>Settings</span>
-          </div>
-          <div class="sidebar-item">
-            <a href="createblog.html"> <i class="fa fa-pen" aria-hidden="true">
-                <span>Crear un blog</span></i>
-            </a>
-          </div>
-          <div class="sidebar-item">
-            <a href="blog.html"><i class="fas fa-newspaper fa-m fa-fw"></i>
-            <span>Articulos</span>
+        <div class="sidebar-item">
+          <a onclick="SidebarHide()"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
+          <span>Settings</span>
+        </div>
+        <div class="sidebar-item">
+          <a href="createblog.html"> <i class="fa fa-pen" aria-hidden="true">
+              <span>Crear un blog</span></i>
           </a>
-          </div>
-          <div class="sidebar-item">
-            <a href="personal_data.html"> <i class="fa fa-user" aria-hidden="true">
-                <span>Account Settings</span></i></a>
-          </div>
-          <div class="sidebar-item">
-            <a href=""><i class="fa fa-bell" aria-hidden="true"></i></a>
-            <span>Notifications</span>
-            <input type="checkbox">
-          </div>
-          <div class="sidebar-item">
-            <a href=""><i class="fa fa-lock" aria-hidden="true"></i></a>
-            <span>Privacy</span>
-          </div>
-          <div class="sidebar-item d-flex justify-content-center"> <!-- Contenedor para centrar -->
-            <span>Seguidores: xxx</span>
-          </div>
-          
-        </div> <!-- Right Sidebar -->
-      </div>
+        </div>
+        <div class="sidebar-item">
+          <a href="blog.html"><i class="fas fa-newspaper fa-m fa-fw"></i>
+          <span>Articulos</span>
+        </a>
+        </div>
+        <div class="sidebar-item">
+          <a href="personal_data.html"> <i class="fa fa-user" aria-hidden="true">
+              <span>Account Settings</span></i></a>
+        </div>
+        <div class="sidebar-item">
+          <a href=""><i class="fa fa-bell" aria-hidden="true"></i></a>
+          <span>Notifications</span>
+          <input type="checkbox">
+        </div>
+        <div class="sidebar-item">
+          <a href=""><i class="fa fa-lock" aria-hidden="true"></i></a>
+          <span>Privacy</span>
+        </div>
+        <div class="sidebar-item d-flex justify-content-center"> <!-- Contenedor para centrar -->
+          <span>Seguidores: xxx</span>
+        </div>
+        
+      </div> <!-- Right Sidebar -->
+
     </div> <!--CONTENIDO-->
-
-  
-
-
-
   <!-- Optional JavaScript -->
+
   <script src="./../javascript/sidebar.js"></script>
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <!-- jQuery firsV t, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
   </script>
