--- a/app/view/inside_blog.html
+++ b/app/view/inside_blog.html
@@ -29,14 +29,14 @@
           <i class="fa fa-user-circle" aria-hidden="true"></i>
         </button>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="triggerId">
-          <a class="dropdown-item" href="#Login" data-toggle="modal">LOGIN</a>
-          <a class="dropdown-item" href="#registro" data-toggle="modal">REGISTER</a>
+          <a class="dropdown-item" href="#Login" data-toggle="modal">Login</a>
+          <a class="dropdown-item" href="#registro" data-toggle="modal">Registrarse</a>
         </div>
       </div>
       <a id="barMenu" onclick="Sidebarcheck()"><i class="fas fa-bars"></i> </a>
     </nav> <!--NAVBAR-->
   
-     <!--LOGIN MODAL-->
+     <!--Login MODAL-->
   <div class="modal fade" id="Login" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -78,9 +78,9 @@
         </div>
     </div>
 </div>
-  <!--LOGIN MODAL-->
+  <!--Login MODAL-->
 
-    <!--REGISTER MODAL-->
+    <!--Registrarse MODAL-->
     <div class="modal fade" id="registro" tabindex="-1" role="dialog" aria-labelledby="registroTitle" aria-hidden="true">
       <div class="modal-dialog" role="document">
           <div class="modal-content">
@@ -114,7 +114,7 @@
           </div>
       </div>
   </div>
-  <!--REGISTER MODAL-->
+  <!--Registrarse MODAL-->
 
     <div class="container-fluid"> <!-- CONTENIDO-->
       <div class="row">
@@ -143,14 +143,21 @@
         </div> <!-- Main Content Container -->
   
   
-        <div class="col-md-2 align-items-center justify-content-end" id="right_sidebar"> <!--RightSidebar-->
+        <div class="col-md-2 align-items-center justify-content-end" id="right_sidebar"><!--RightSidebar-->
+        
           <div class="sidebar-item">
             <a onclick="SidebarHide()"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
             <span>Settings</span>
           </div>
           <div class="sidebar-item">
-            <a href="blog.html"><i class="fas fa-newspaper fa-m fa-fw"></i></a>
+            <a href="createblog.html"> <i class="fa fa-pen" aria-hidden="true">
+                <span>Crear un blog</span></i>
+            </a>
+          </div>
+          <div class="sidebar-item">
+            <a href="blog.html"><i class="fas fa-newspaper fa-m fa-fw"></i>
             <span>Articulos</span>
+          </a>
           </div>
           <div class="sidebar-item">
             <a href="personal_data.html"> <i class="fa fa-user" aria-hidden="true">
@@ -165,6 +172,10 @@
             <a href=""><i class="fa fa-lock" aria-hidden="true"></i></a>
             <span>Privacy</span>
           </div>
+          <div class="sidebar-item d-flex justify-content-center"> <!-- Contenedor para centrar -->
+            <span>Seguidores: xxx</span>
+          </div>
+          
         </div> <!-- Right Sidebar -->
   
   
