--- a/app/view/inside_blog.html
+++ b/app/view/inside_blog.html
@@ -185,6 +185,11 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
+   <script src="./../javascript/sidebar.js"></script>
+   <script src="./../javascript/user.js"></script>
+   <script src="./../javascript/comment.js"></script>
+   <script src="./../javascript/post.js"></script>
+   <script src="./../javascript/datahandler.js"></script>
   </body>
 
 </html>
