Se agrego s a style(s) para arreglar+

--- a/app/view/inside_blog.html
+++ b/app/view/inside_blog.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
  </head> 
  <body>
 
@@ -124,8 +124,8 @@
             <h1 class="text-center">TITULO MUY COOL</h1>
             <div class="row">
               <p class="header_element">Tiempo de lectura: 12 minutos</p>
-              <p class="header_element">Autor:Jose</p>
-              <p class="header_element">Fecha de creacion:12/04/02</p>             
+              <p class="header_element">Autor: Jose</p>
+              <p class="header_element">Fecha de creacion: 12/04/2024</p>             
               <button class="header_element btn-trans" id="btn-like" onclick="stateChange()"> <i class="far fa-heart"></i></button><p id="number_of_likes">100</p>
             </div>
           </div>
