se cambio las funciones de la sidebar a utils.js, ademas de que se agrego la funcionalidad para poder abrirlo aunque no se use live server

--- a/app/view/createblog.html
+++ b/app/view/createblog.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles.css" >
+  <link rel="stylesheet" href="style.css" >
 </head> <body>
 
     <nav class="bgnav navbar navbar-expand-sm navbar-light"> <!--NAVBAR-->
@@ -181,7 +181,7 @@
     </div> <!--CONTENIDO-->
   <!-- Optional JavaScript -->
 
-  <script src="./../javascript/sidebar.js"></script>
+  <script src="./../javascript/utils.js"></script>
   <!-- jQuery firsV t, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
