--- a/app/view/inside_blog.html
+++ b/app/view/inside_blog.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
  </head> 
  <body>
 
@@ -184,7 +184,7 @@
 
   <!-- Optional JavaScript -->
   <script src="./../javascript/p.js"></script>
-  <script src="./../javascript/sidebar.js"></script>
+  <script src="./../javascript/utils.js"></script>
   
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -196,7 +196,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
-   <script src="./../javascript/sidebar.js"></script>
+   <script src="./../javascript/utils.js"></script>
    <script src="./../javascript/user.js"></script>
    <script src="./../javascript/comment.js"></script>
    <script src="./../javascript/post.js"></script>
