Se arreglo la barra derecha, se cambio la left-sidebar para que en lugar de manejar contactos, maneje Edicion y eliminacion de Blogs

--- a/app/view/blog.html
+++ b/app/view/blog.html
@@ -177,6 +177,10 @@
             </a>
           </div>
           <div class="sidebar-item">
+            <a href="createblog.html"> <i class="fa fa-paint-brush" aria-hidden="true">
+                <span>Editar un Blog</span></i></a>
+          </div>
+          <div class="sidebar-item">
             <a href="blog.html"><i class="fas fa-newspaper fa-m fa-fw"></i>
             <span>Articulos</span>
           </a>
@@ -185,15 +189,8 @@
             <a href="personal_data.html"> <i class="fa fa-user" aria-hidden="true">
                 <span>Account Settings</span></i></a>
           </div>
-          <div class="sidebar-item">
-            <a href=""><i class="fa fa-bell" aria-hidden="true"></i></a>
-            <span>Notifications</span>
-            <input type="checkbox">
-          </div>
-          <div class="sidebar-item">
-            <a href=""><i class="fa fa-lock" aria-hidden="true"></i></a>
-            <span>Privacy</span>
-          </div>
+  
+  
           <div class="sidebar-item d-flex justify-content-center"> <!-- Contenedor para centrar -->
             <span>Seguidores: xxx</span>
           </div>
