--- a/app/view/home.html
+++ b/app/view/home.html
@@ -122,19 +122,34 @@
       <div class="row">
         <div class="col-md-1 align-items-center justify-content-end" id="left_sidebar"><!-- Left Sidebar -->
           <div class="sidebar-item">
-            <a href="#">Contactos<br></a>
+            <h4>Editar<br></h4>
           </div>
           <div class="sidebar-item">
-            <span>ITEM1</span>
+            <a>Blog1</a>
           </div>
           <div class="sidebar-item">
-                <span>ITEM2</span></i></a>
+            <a>Blog2</a></i></a>
           </div>
           <div class="sidebar-item">
-            <span>ITEM3</span>
+            <a>Blog3</a>
           </div>
           <div class="sidebar-item">
-            <span>ITEM4</span>
+            <a>Blog4</a>
+          </div>
+          <div class="sidebar-item">
+            <h4>Eliminar<br></h4>
+          </div>
+          <div class="sidebar-item">
+            <a>Blog1</a>
+          </div>
+          <div class="sidebar-item">
+            <a>Blog2</a></i></a>
+          </div>
+          <div class="sidebar-item">
+            <a>Blog3</a>
+          </div>
+          <div class="sidebar-item">
+            <a>Blog4</a>
           </div>
 
         </div> <!-- Left Sidebar -->
@@ -186,6 +201,10 @@
             </a>
           </div>
           <div class="sidebar-item">
+            <a href="createblog.html"> <i class="fa fa-paint-brush" aria-hidden="true">
+                <span>Editar un Blog</span></i></a>
+          </div>
+          <div class="sidebar-item">
             <a href="blog.html"><i class="fas fa-newspaper fa-m fa-fw"></i>
             <span>Articulos</span>
           </a>
@@ -194,15 +213,8 @@
             <a href="personal_data.html"> <i class="fa fa-user" aria-hidden="true">
                 <span>Account Settings</span></i></a>
           </div>
-          <div class="sidebar-item">
-            <a href=""><i class="fa fa-bell" aria-hidden="true"></i></a>
-            <span>Notifications</span>
-            <input type="checkbox">
-          </div>
-          <div class="sidebar-item">
-            <a href=""><i class="fa fa-lock" aria-hidden="true"></i></a>
-            <span>Privacy</span>
-          </div>
+  
+  
           <div class="sidebar-item d-flex justify-content-center"> <!-- Contenedor para centrar -->
             <span>Seguidores: xxx</span>
           </div>
