--- a/app/view/inside_blog.html
+++ b/app/view/inside_blog.html
@@ -183,57 +183,49 @@
             
           </div>
         </div> <!--Cajara de los comentarios-->
-
+        
 
         </div> <!-- Main Content Container -->
-
-
-  
-  
-        <div class="col-md-2 align-items-center justify-content-end" id="right_sidebar"><!--RightSidebar-->
-        
-          <div class="sidebar-item">
-            <a onclick="SidebarHide()"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
-            <span>Settings</span>
-          </div>
-          <div class="sidebar-item">
-            <a href="createblog.html"> <i class="fa fa-pen" aria-hidden="true">
-                <span>Crear un blog</span></i>
-            </a>
-          </div>
-          <div class="sidebar-item">
-            <a href="blog.html"><i class="fas fa-newspaper fa-m fa-fw"></i>
-            <span>Articulos</span>
-          </a>
-          </div>
-          <div class="sidebar-item">
-            <a href="personal_data.html"> <i class="fa fa-user" aria-hidden="true">
-                <span>Account Settings</span></i></a>
-          </div>
-          <div class="sidebar-item">
-            <a href=""><i class="fa fa-bell" aria-hidden="true"></i></a>
-            <span>Notifications</span>
-            <input type="checkbox">
-          </div>
-          <div class="sidebar-item">
-            <a href=""><i class="fa fa-lock" aria-hidden="true"></i></a>
-            <span>Privacy</span>
-          </div>
-          <div class="sidebar-item d-flex justify-content-center"> <!-- Contenedor para centrar -->
-            <span>Seguidores: xxx</span>
-          </div>
-          
-        </div> <!-- Right Sidebar -->
-
-
-
-  
-  
       </div> 
+      <div class="col-md-2 align-items-center justify-content-end" id="right_sidebar"><!--RightSidebar-->
+        
+        <div class="sidebar-item">
+          <a onclick="SidebarHide()"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
+          <span>Settings</span>
+        </div>
+        <div class="sidebar-item">
+          <a href="createblog.html"> <i class="fa fa-pen" aria-hidden="true">
+              <span>Crear un blog</span></i>
+          </a>
+        </div>
+        <div class="sidebar-item">
+          <a href="createblog.html"> <i class="fa fa-paint-brush" aria-hidden="true">
+              <span>Editar un Blog</span></i></a>
+        </div>
+        <div class="sidebar-item">
+          <a href="blog.html"><i class="fas fa-newspaper fa-m fa-fw"></i>
+          <span>Articulos</span>
+        </a>
+        </div>
+        <div class="sidebar-item">
+          <a href="personal_data.html"> <i class="fa fa-user" aria-hidden="true">
+              <span>Account Settings</span></i></a>
+        </div>
+
+
+        <div class="sidebar-item d-flex justify-content-center"> <!-- Contenedor para centrar -->
+          <span>Seguidores: xxx</span>
+        </div>
+        
+      </div> <!-- Right Sidebar -->
     </div> <!--CONTENIDO-->
 
   <!-- Optional JavaScript -->
   <script src="./../javascript/utils.js"></script>
+  <!-- <script src="./../javascript/user.js"></script>
+  <script src="./../javascript/comment.js"></script>
+  <script src="./../javascript/post.js"></script>
+  <script src="./../javascript/datahandler.js"></script> -->
   
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -245,11 +237,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
-   <script src="./../javascript/utils.js"></script>
-   <script src="./../javascript/user.js"></script>
-   <script src="./../javascript/comment.js"></script>
-   <script src="./../javascript/post.js"></script>
-   <script src="./../javascript/datahandler.js"></script>
+
   </body>
 
 </html>
